--- a/style.css
+++ b/style.css
@@ -3,3 +3,48 @@ body, ul{
 	padding: 0;
 	font-family: "Verdana"
 }
+
+.header {
+	width: 100%;
+	background-color: #1b5589;
+}
+
+a{
+	text-decoration: none;
+	color:#7492b1;
+}
+ul{
+	list-style-type: none;
+}
+.header ul{
+	display: flex;
+	justify-content: flex-start;
+}
+
+.header ul li:first-child,
+.header ul li:last-child{
+	padding: 10px;
+	
+}
+.header ul li{
+	padding: 15px;
+	
+}
+
+.header ul li:first-child img{
+	width: 35px;
+	height: 35px;
+	padding-left: 40px;
+}
+.header ul li:last-child img{
+	width: 45px;
+	height: 45px;
+}
+
+.header ul li:last-child{
+	padding-left: 65%;
+}
+
+.header a:hover{
+	color:#fefbf9;
+}
