--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body, ul{
 	margin: 0;
 	padding: 0;
-	font-family: "Verdana"
+	font-family: "Lucida Sans Unicode";
 }
 
 .header {
@@ -47,4 +47,11 @@ ul{
 
 .header a:hover{
 	color:#fefbf9;
+}
+
+.settings{
+	width: 100%;
+	text-align: center;
+	font-size: 24px;
+	margin-top: 30px;
 }
