--- a/style.css
+++ b/style.css
@@ -109,15 +109,28 @@ label{
 	justify-content: space-between;
 }
 #avatar{
-	width: 20%;
+	margin-left: 20px;
+	margin-top:40px;
+	width: 15%;
 }
 #info, #pass{
 	width: 40%;
 }
-#info input, #pass input{
-	width: 90%;
+#info input:first-child, #pass input:first-child{
 	margin-top: 30px;
+}
+#info input, #pass input{
+	width: 95%;
+	margin-top: 10px;
 	height: 35px;
+	border:1px solid #dde1e5 ;
+	border-radius: 5px;
 }
 
+input[type="submit"]{
+	background-color: #6c757d;
+	color: #fff4e1;
+	border:none;
+	border-radius: 5px;
+}
 
