--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ label{
 	height: 35px;
 	border:1px solid #dde1e5 ;
 	border-radius: 5px;
+	font-family: "Lucida Sans Unicode";
 }
 
 input[type="submit"]{
@@ -132,5 +133,6 @@ input[type="submit"]{
 	color: #fff4e1;
 	border:none;
 	border-radius: 5px;
+	font-family: "Lucida Sans Unicode";
 }
 
